Added scrollbar & li styling

--- a/public/input.css
+++ b/public/input.css
@@ -2,19 +2,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
 }
 
 div {
-    color: aliceblue;
+  color: aliceblue;
+  
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #2c3748; /* Track background */
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #4a5568; /* Thumb color */
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #718096; /* Hover effect */
+  }
 }
 
-button {
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); */
+button, li {
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); */
 }
-button:hover {
-    background-color: #f8f8f815;
+button:hover, li:hover {
+  background-color: #f8f8f815;
 }
+
