--- a/public/input.css
+++ b/public/input.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 body {
   font-family: 'Montserrat', sans-serif;
@@ -36,5 +37,14 @@ button, li {
 }
 button:hover, li:hover {
   background-color: #f8f8f815;
+}
+
+.blehh {
+  box-shadow: inset 0 0 0 1px #6a7282;
+}
+
+.blahh {
+  background-color: #1c1c1c;
+  box-shadow: 0 0 4px rgba(219, 226, 255, 1), inset 0 0 4px rgba(219, 226, 255, 1);
 }
 
