--- a/public/output.css
+++ b/public/output.css
@@ -533,24 +533,6 @@
   .left-1\/2 {
     left: calc(1/2 * 100%);
   }
-  .container {
-    width: 100%;
-    @media (width >= 40rem) {
-      max-width: 40rem;
-    }
-    @media (width >= 48rem) {
-      max-width: 48rem;
-    }
-    @media (width >= 64rem) {
-      max-width: 64rem;
-    }
-    @media (width >= 80rem) {
-      max-width: 80rem;
-    }
-    @media (width >= 96rem) {
-      max-width: 96rem;
-    }
-  }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
@@ -728,6 +710,9 @@
   }
   .overflow-y-auto {
     overflow-y: auto;
+  }
+  .overflow-y-hidden {
+    overflow-y: hidden;
   }
   .rounded {
     border-radius: 0.25rem;
@@ -968,6 +953,7 @@
   }
 }
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
@@ -996,6 +982,13 @@ button, li {
 }
 button:hover, li:hover {
   background-color: #f8f8f815;
+}
+.blehh {
+  box-shadow: inset 0 0 0 1px #6a7282;
+}
+.blahh {
+  background-color: #1c1c1c;
+  box-shadow: 0 0 4px rgba(219, 226, 255, 1), inset 0 0 4px rgba(219, 226, 255, 1);
 }
 @keyframes spin {
   to {
