--- a/public/input.css
+++ b/public/input.css
@@ -2,45 +2,91 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+:root {
+  --black-50: rgba(18, 18, 18, 255);
+  --black-100: rgba(30, 30, 31, 255);
+  --brd-black: hsl(0, 0%, 22%);
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
+  background-color: transparent;
 }
 
 div {
+
   color: aliceblue;
-  user-select: none;
 
   ::-webkit-scrollbar {
-    width: 10px;
-  }
-
-  ::-webkit-scrollbar-track {
-    background: #2c3748; /* Track background */
-    border-radius: 10px;
+    width: 7px;
   }
 
   ::-webkit-scrollbar-thumb {
-    background: #4a5568; /* Thumb color */
-    border-radius: 10px;
+    background: var(--brd-black); /* Thumb color */
+    border-radius: 5px;
   }
 
-  ::-webkit-scrollbar-thumb:hover {
-    background: #718096; /* Hover effect */
-  }
 }
 
-button, li {
+button {
   cursor: pointer;
+}
+
+.draggable {
+  -webkit-app-region: drag; /* Make the element draggable */
+}
+
+.bg-eeblack1 {
+  background-color: var(--black-50);
+}
+
+.bg-eeblack2 {
+  background-color: var(--black-100);
+}
+
+.border-color {
+  border-color: var(--brd-black);
+}
+
+.primary-btn, li {
   transition: all 0.3s ease-in-out;
   /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); */
 }
-button:hover, li:hover {
+.primary-btn:hover, li:hover {
   background-color: #f8f8f815;
 }
 
+.btn-primary {
+  animation: buttonPulse 2s infinite;
+}
+
+@keyframes buttonPulse {
+  0% { box-shadow: 0 0 0 0 rgba(139, 92, 246, 0.4); }
+  70% { box-shadow: 0 0 0 10px rgba(139, 92, 246, 0); }
+  100% { box-shadow: 0 0 0 0 rgba(139, 92, 246, 0); }
+}
+
+/* .btn-primary::after,
+.btn-secondary::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 300%;
+  height: 300%;
+  background: radial-gradient(circle, rgba(255,255,255,0.2) 0%, transparent 50%);
+  transform: translate(-50%, -50%) scale(0);
+  transition: transform 0.5s ease-out;
+}
+
+.btn-primary:hover::after,
+.btn-secondary:hover::after {
+  transform: translate(-50%, -50%) scale(1);
+} */
+
 .blehh {
-  box-shadow: inset 0 0 0 1px #6a7282;
+  box-shadow: inset 0 0 0 1px var(--brd-black);
 }
 
 .blahh {
@@ -59,3 +105,8 @@ button:hover, li:hover {
   border-radius: 6px;
 }
 
+/* --jet: hsl(0, 0%, 22%);
+--onyx: hsl(240, 1%, 17%);
+--eerie-black1: hsl(240, 2%, 13%);
+--eerie-black2: hsl(240, 2%, 12%);
+--smoky-black: hsl(0, 0%, 7%); */
